alignment correction

--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ body{
     margin-bottom: 30px ;
     font-size: 20px;
     text-align: center;
-    border: 1px solid hsl(150, 100%, 66%);
 }
 
 @media (max-width: 330px) {
